bpo-45820: Fix a segfault when the parser fails without reading any input (GH-29580)